--- a/manifest.json
+++ b/manifest.json
@@ -7,21 +7,24 @@
 	"background": {
 			"service_worker": "background.js"
 	},
+	"web_accessible_resources": [
+			{
+					"resources": ["lib/chart.js", "chart.css"],
+					"matches": ["<all_urls>"]
+			}
+	],
 	"content_scripts": [
 			{
 					"matches": ["<all_urls>"],
-					"js": ["contentScript.js"],
+					"js": ["lib/chart.js","contentScript.js"],
 					"run_at": "document_start"
 			}
 	],
 	"action": {
-			"default_icon": {
-					"16": "assets/ext-icon.png",
-					"24": "assets/ext-icon.png",
-					"32": "assets/ext-icon.png"
-			},
 			"default_title": "My YT Bookmarks",
 			"default_popup": "popup.html"
 	},
+	
+
 	"manifest_version": 3
 }
