--- a/manifest.json
+++ b/manifest.json
@@ -11,12 +11,12 @@
 			{
 					"resources": ["lib/chart.js", "scripts/LanguageManager.js", "assets/Kalimat_header.png", "components/chart/chart.html", "components/chart/chart.js", "components/chart/chart.css",
 					 "components/table/table.html"],
-					"matches": ["https://*.google.com/*", "https://*.amazon.com/*"]
+					"matches": ["https://*.google.com/*", "https://*.amazon.com/*", "https://*.amazon.sa/*"]
 			}
 	],
 	"content_scripts": [
 			{
-				"matches": ["https://*.google.com/*", "https://*.amazon.com/*"],
+				"matches": ["https://*.google.com/*", "https://*.amazon.com/*", "https://*.amazon.sa/*"],
 					"js": ["lib/xlsx.full.min.js", "lib/chart.js","contentScript.js"],
 					"run_at": "document_start"
 			}
