--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 MONGO_URL= mongodb+srv://dev1:kalimat123@kalimat.zg0uxv1.mongodb.net/?retryWrites=true&w=majority
-
+PORT = 8000
 JWT_SECRET=3247954029
