--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "fastify": "^4.26.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1"
   }
