--- a/old_frontend/package.json
+++ b/old_frontend/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
     "gapi-script": "^1.2.0",
@@ -14,7 +14,6 @@
     "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
-    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
